index.css
/* ... */
.classic.tileset-colorful {
    --block-2-color: rgb(0, 128, 0);
    --block-4-color: rgb(64, 224, 208);
    --block-8-color: rgb(173, 216, 230);
    --block-16-color: rgb(240, 248, 255);
    --block-32-color: rgb(0, 0, 255);
    --block-64-color: rgb(128, 0, 128);
    --block-128-color: rgb(255, 192, 203);
    --block-256-color: rgb(255, 255, 0);
    --block-512-color: rgb(255, 165, 0);
    --block-1024-color: rgb(255, 69, 0);
    --block-2048-color: rgb(255, 0, 0);
    --block-max-color: rgb(0, 0, 0);

    --block-2-text-color: var(--black);
    --block-4-text-color: var(--black);
    --block-8-text-color: var(--black);
    --block-16-text-color: var(--black);
    --block-32-text-color: var(--white);
    --block-64-text-color: var(--white);
    --block-128-text-color: var(--black);
    --block-256-text-color: var(--black);
    --block-512-text-color: var(--black);
    --block-1024-text-color: var(--black);
    --block-2048-text-color: var(--black);
    --block-max-text-color: var(--white);
}

/* Main Content */

html {
    font-size: 125%;
    font-family: var(--text-font-family);
}

body {
    background: var(--fallback-background-color);
    background: var(--background-color);
    margin: 0;
    overflow: hidden;
}

body.classic {
    background-image: url("/images/CheckerboardTiles.png");
}

svg {
    color: var(--text-color);
}

.top-menu {
    position: relative;
    background-color: var(--item-background-color);
    border-bottom: 1px solid var(--standard-color);
    padding: 1rem;
    font-size: 1rem;
    font-family: var(--text-font-family);
    color: var(--text-color);
    display: flex;
    justify-content: space-between;
    height: 160px;
    box-sizing: border-box;
}

.top-menu > .title {
    border: 2px solid goldenrod;
    border-radius: 20px;
    padding: 20px;
    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);

    text-align: center;
    text-transform: uppercase;
}

.top-menu > .title > span {
    font-family: "Arial", sans-serif;
    font-size: 24px;
    font-weight: 600;
    color: #8b4513;
}

.top-menu > .title > span:first-child {
    font-size: 40px;
    font-weight: bold;
    color: #d4af37;
}

.top-menu .icon-bar > a.link-icon {
    text-decoration: none;
}

a.link-icon.disabled > * {
    color: grey;
}

/* NTS: Hover color still appears and won't go away after tapping elsewhere on iOS.
    Workaround for now to disable hover color on iOS - https://stackoverflow.com/a/40617793 */
@media (hover) {
    body.classic .top-menu .icon-bar > a.link-icon:hover > svg {
        color: var(--hovered-color);
    }
}

.top-menu > .menu-options {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

body.classic .top-menu > .title {
    display: none;
}

body.classic .top-menu > .classic-logo {
    display: block !important;
    width: 200px;
}

body.classic .top-menu > .menu-options {
    background-color: rgba(255, 165, 0);
}

.game-space {
    width: 100%;
    display: flex;
    justify-content: center;
    position: relative;
}

.back-rows {
    position: absolute;
    padding: 2px;
    background-color: var(--back-layer-color);
    transform: translateY(-50%);
}

body.classic .back-rows {
    background-color: rgba(0, 0, 0, 0);
    border: 2px solid black;
    padding: 0px;
}

.base-rows {
    padding: 2px;
    transform: translateY(-50%);
}

.game-wrapper {
    position: relative;
    left: 50%;
    width: 50vw;
    height: 100%;
    transform: translateX(-50%);
}

.input-row {
    display: flex;
    justify-content: center;
    align-items: center;
    max-height: 3rem;
}

.back-row {
    display: flex;
    justify-content: center;
    align-items: center;
    max-height: 3rem;
}

.pane > .space {
    flex: 1;
}

.pane .pane-overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

@media (max-width: 1028px) {
    .game-wrapper {
        width: 100%;
    }
}

.pane {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: auto;
    height: calc(100% - 64px);
    width: 100%;
    transform-origin: top;
}

.pane h1,
h2,
h3,
h4,
h5 {
    color: var(--text-color);
}

.pane > .footer {
    color: var(--text-color);
    text-align: center;
}

body.classic .pane > .footer a:hover {
    color: var(--hovered-color);
}

button {
    border: none;
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

button.close {
    z-index: 1;
    width: 2.5rem;
    height: 2.5rem;
    background-color: rgba(0, 0, 0, 0);
    color: var(--text-color);
}

body.classic button.close:hover > svg {
    color: var(--hovered-color);
}

button.button {
    font-family: var(--text-font-family);
    padding: 8px;
}

body.classic button.button {
    background-color: rgba(0, 0, 0, 0);
}

body.classic button.button:hover {
    color: var(--hovered-color);
}

/* Settings */

.settings {
    position: relative;
}

.settings > button.close {
    position: absolute;
    top: 0;
    right: 0;
}

.settings > .settings-item-group {
    width: 100%;
}

.settings .settings-item {
    color: var(--text-color);
    display: flex;
    width: 100%;
    justify-content: space-around;
    align-items: center;
    border-top: var(--settings-item-border-color);
    border-bottom: none;
    height: 2em;
}

.settings .settings-item:last-child {
    border-bottom: var(--settings-item-border-color);
}

.settings .settings-item > * {
    pointer-events: none;
}

.settings .settings-item > a {
    text-decoration: none;
}

/* NTS: Hover color still appears and won't go away after tapping elsewhere on iOS.
    Workaround for now to disable hover color on iOS - https://stackoverflow.com/a/40617793 */
@media (hover) {
    body.classic .settings .settings-item:hover > * {
        color: var(--hovered-color);
    }
}

.settings .settings-item .settings-item-column {
    width: 100%;
    display: flex;
    justify-content: center;
}
/* ... */

